include/xprs.h


typedef struct xo_prob_struct* XPRSprob;

/***************************************************************************\
 * values related to CUTSELECT                                             *
\***************************************************************************/
#define XPRS_CUTSELECT_CLIQUE                   (32+1823)
#define XPRS_CUTSELECT_MIR                      (64+1823)
#define XPRS_CUTSELECT_COVER                    (128+1823)
#define XPRS_CUTSELECT_FLOWPATH                 (2048+1823)
#define XPRS_CUTSELECT_IMPLICATION              (4096+1823)
#define XPRS_CUTSELECT_LIFT_AND_PROJECT         (8192+1823)
#define XPRS_CUTSELECT_DISABLE_CUT_ROWS         (16384+1823)
#define XPRS_CUTSELECT_GUB_COVER                (32768+1823)
#define XPRS_CUTSELECT_DEFAULT                  (-1)

/***************************************************************************\
 * values related to REFINEOPS                                             *
\***************************************************************************/
#define XPRS_REFINEOPS_LPOPTIMAL                1
#define XPRS_REFINEOPS_MIPSOLUTION              2
#define XPRS_REFINEOPS_MIPOPTIMAL               4
#define XPRS_REFINEOPS_MIPNODELP                8

/***************************************************************************\
 * values related to DUALIZEOPS                                            *
\***************************************************************************/
#define XPRS_DUALIZEOPS_SWITCHALGORITHM          1

/***************************************************************************\
 * values related to TREEDIAGNOSTICS                                       *
\***************************************************************************/
#define XPRS_TREEDIAGNOSTICS_MEMORY_USAGE_SUMMARIES   1
#define XPRS_TREEDIAGNOSTICS_MEMORY_SAVED_REPORTS     2

/***************************************************************************\
 * values related to BARPRESOLVEOPS                                        *
\***************************************************************************/
#define XPRS_BARPRESOLVEOPS_STANDARD_PRESOLVE        0
#define XPRS_BARPRESOLVEOPS_EXTRA_BARRIER_PRESOLVE   1

/***************************************************************************\
 * values related to PRECOEFELIM                                           *
\***************************************************************************/
#define XPRS_PRECOEFELIM_DISABLED                 0
#define XPRS_PRECOEFELIM_AGGRESSIVE               1
#define XPRS_PRECOEFELIM_CAUTIOUS                 2

/***************************************************************************\
 * values related to PREDOMROW                                             *
\***************************************************************************/
#define XPRS_PREDOMROW_AUTOMATIC                -1
#define XPRS_PREDOMROW_DISABLED                 0
#define XPRS_PREDOMROW_CAUTIOUS                 1
#define XPRS_PREDOMROW_MEDIUM                   2
#define XPRS_PREDOMROW_AGGRESSIVE               3

/***************************************************************************\
 * values related to PREDOMCOL                                             *
\***************************************************************************/
#define XPRS_PREDOMCOL_AUTOMATIC                -1
#define XPRS_PREDOMCOL_DISABLED                 0
#define XPRS_PREDOMCOL_CAUTIOUS                 1
#define XPRS_PREDOMCOL_AGGRESSIVE               2

/***************************************************************************\
 * values related to PRIMALUNSHIFT                                         *
\***************************************************************************/
#define XPRS_PRIMALUNSHIFT_ALLOW_DUAL_UNSHIFT       0
#define XPRS_PRIMALUNSHIFT_NO_DUAL_UNSHIFT          1

/***************************************************************************\
 * values related to REPAIRINDEFINITEQ                                     *
\***************************************************************************/
#define XPRS_REPAIRINDEFINITEQ_REPAIR_IF_POSSIBLE       0
#define XPRS_REPAIRINDEFINITEQ_NO_REPAIR                1

/***************************************************************************\
 * values related to Minimize/Maximize                                     *
\***************************************************************************/
#define XPRS_OBJ_MINIMIZE                 1
#define XPRS_OBJ_MAXIMIZE                 -1

/***************************************************************************\
 * values related to Set/GetControl/Attribinfo                                  *
\***************************************************************************/
#define XPRS_TYPE_NOTDEFINED               0
#define XPRS_TYPE_INT                      1
#define XPRS_TYPE_INT64                    2
#define XPRS_TYPE_DOUBLE                   3
#define XPRS_TYPE_STRING                   4

/***************************************************************************\
 * values related to QCONVEXITY                                            *
\***************************************************************************/
#define XPRS_QCONVEXITY_UNKNOWN                  -1
#define XPRS_QCONVEXITY_NONCONVEX                0
#define XPRS_QCONVEXITY_CONVEX                   1
#define XPRS_QCONVEXITY_REPAIRABLE               2
#define XPRS_QCONVEXITY_CONVEXCONE               3
#define XPRS_QCONVEXITY_CONECONVERTABLE          4

/***************************************************************************\
 * values related to SOLINFO                                               *
\***************************************************************************/
#define XPRS_SOLINFO_ABSPRIMALINFEAS          0
#define XPRS_SOLINFO_RELPRIMALINFEAS          1
#define XPRS_SOLINFO_ABSDUALINFEAS            2
#define XPRS_SOLINFO_RELDUALINFEAS            3
#define XPRS_SOLINFO_MAXMIPFRACTIONAL         4


/****************************************************************************\
 * values of bit flags for MipSolPool Solution                              *
\****************************************************************************/
#define XPRS_ISUSERSOLUTION                 0x1
#define XPRS_ISREPROCESSEDUSERSOLUTION      0x2

int XPRS_CC XPRScopycallbacks(XPRSprob dest, XPRSprob src);

int XPRS_CC XPRScopycontrols(XPRSprob dest, XPRSprob src);

int XPRS_CC XPRScopyprob(XPRSprob dest, XPRSprob src, const char* probname);

int XPRS_CC XPRScreateprob(XPRSprob* _probholder);

int XPRS_CC XPRSdestroyprob(XPRSprob _prob);


int XPRS_CC XPRSinit(const char* path);

int XPRS_CC XPRSfree(void);

int XPRS_CC XPRSgetbanner(char* banner);

int XPRS_CC XPRSgetversion(char* version);

int XPRS_CC XPRSgetdaysleft(int* daysleft);

int XPRS_CC XPRSsetcheckedmode(int checked_mode);

int XPRS_CC XPRSgetcheckedmode(int* r_checked_mode);

int XPRS_CC XPRSlicense(int* _i1, char* _c1);

int XPRS_CC XPRSbeginlicensing(int* r_dontAlreadyHaveLicense);

int XPRS_CC XPRSendlicensing(void);

int XPRS_CC XPRSgetlicerrmsg(char* msg, int len);


int XPRS_CC XPRSsetlogfile(XPRSprob prob, const char* logname);

int XPRS_CC XPRSsetintcontrol(XPRSprob prob, int _index, int _ivalue);

int XPRS_CC XPRSsetdblcontrol(XPRSprob prob, int _index, double _dvalue);

int XPRS_CC XPRSinterrupt(XPRSprob prob, int reason);

int XPRS_CC XPRSgetprobname(XPRSprob prob, char* _svalue);

int XPRS_CC XPRSgetqobj(XPRSprob prob, int _icol, int _jcol, double* _dval);

int XPRS_CC XPRSsetprobname(XPRSprob prob, const char* _svalue);

int XPRS_CC XPRSsetstrcontrol(XPRSprob prob, int _index, const char* _svalue);

int XPRS_CC XPRSgetintcontrol(XPRSprob prob, int _index, int* _ivalue);

int XPRS_CC XPRSgetdblcontrol(XPRSprob prob, int _index, double* _dvalue);

int XPRS_CC XPRSgetstrcontrol(XPRSprob prob, int _index, char* _svalue);

int XPRS_CC XPRSgetstringcontrol(XPRSprob prob, int _index, char* _svalue, int _svaluesize, int* _controlsize);

int XPRS_CC XPRSgetintattrib(XPRSprob prob, int _index, int* _ivalue);

int XPRS_CC XPRSgetstrattrib(XPRSprob prob, int _index, char* _cvalue);

int XPRS_CC XPRSgetstringattrib(XPRSprob prob, int _index, char* _cvalue, int _cvaluesize, int* _controlsize);

int XPRS_CC XPRSgetdblattrib(XPRSprob prob, int _index, double* _dvalue);

int XPRS_CC XPRSsetdefaultcontrol(XPRSprob prob, int _index);

int XPRS_CC XPRSsetdefaults(XPRSprob prob);

int XPRS_CC XPRSgetcontrolinfo(XPRSprob prob, const char* sCaName, int* iHeaderId, int* iTypeinfo);

int XPRS_CC XPRSgetattribinfo(XPRSprob prob, const char* sCaName, int* iHeaderId, int* iTypeinfo);