include/xprs.bas


' Enumeration values relating to CUTSELECT
Global Const XPRS_CUTSELECT_CLIQUE = (32+1823)
Global Const XPRS_CUTSELECT_MIR = (64+1823)
Global Const XPRS_CUTSELECT_COVER = (128+1823)
Global Const XPRS_CUTSELECT_FLOWPATH = (2048+1823)
Global Const XPRS_CUTSELECT_IMPLICATION = (4096+1823)
Global Const XPRS_CUTSELECT_LIFT_AND_PROJECT = (8192+1823)
Global Const XPRS_CUTSELECT_DISABLE_CUT_ROWS = (16384+1823)
Global Const XPRS_CUTSELECT_GUB_COVER = (32768+1823)
Global Const XPRS_CUTSELECT_DEFAULT = (-1)

' Enumeration values relating to REFINEOPS
Global Const XPRS_REFINEOPS_LPOPTIMAL = 1
Global Const XPRS_REFINEOPS_MIPSOLUTION = 2
Global Const XPRS_REFINEOPS_MIPOPTIMAL = 4
Global Const XPRS_REFINEOPS_MIPNODELP = 8

' Enumeration values relating to DUALIZEOPS
Global Const XPRS_DUALIZEOPS_SWITCHALGORITHM = 1

' Enumeration values relating to TREEDIAGNOSTICS
Global Const XPRS_TREEDIAGNOSTICS_MEMORY_USAGE_SUMMARIES = 1
Global Const XPRS_TREEDIAGNOSTICS_MEMORY_SAVED_REPORTS = 2

' Enumeration values relating to BARPRESOLVEOPS
Global Const XPRS_BARPRESOLVEOPS_STANDARD_PRESOLVE = 0
Global Const XPRS_BARPRESOLVEOPS_EXTRA_BARRIER_PRESOLVE = 1

' Enumeration values relating to PRECOEFELIM
Global Const XPRS_PRECOEFELIM_DISABLED = 0
Global Const XPRS_PRECOEFELIM_AGGRESSIVE = 1
Global Const XPRS_PRECOEFELIM_CAUTIOUS = 2

' Enumeration values relating to PREDOMROW
Global Const XPRS_PREDOMROW_AUTOMATIC = -1
Global Const XPRS_PREDOMROW_DISABLED = 0
Global Const XPRS_PREDOMROW_CAUTIOUS = 1
Global Const XPRS_PREDOMROW_MEDIUM = 2
Global Const XPRS_PREDOMROW_AGGRESSIVE = 3

' Enumeration values relating to PREDOMCOL
Global Const XPRS_PREDOMCOL_AUTOMATIC = -1
Global Const XPRS_PREDOMCOL_DISABLED = 0
Global Const XPRS_PREDOMCOL_CAUTIOUS = 1
Global Const XPRS_PREDOMCOL_AGGRESSIVE = 2

' Enumeration values relating to PRIMALUNSHIFT
Global Const XPRS_PRIMALUNSHIFT_ALLOW_DUAL_UNSHIFT = 0
Global Const XPRS_PRIMALUNSHIFT_NO_DUAL_UNSHIFT = 1

' Enumeration values relating to REPAIRINDEFINITEQ
Global Const XPRS_REPAIRINDEFINITEQ_REPAIR_IF_POSSIBLE = 0
Global Const XPRS_REPAIRINDEFINITEQ_NO_REPAIR = 1

' Enumeration values relating to Minimize/Maximize
Global Const XPRS_OBJ_MINIMIZE = 1
Global Const XPRS_OBJ_MAXIMIZE = -1

' Enumeration values relating to Set/GetControl/Attribinfo
Global Const XPRS_TYPE_NOTDEFINED = 0
Global Const XPRS_TYPE_INT = 1
Global Const XPRS_TYPE_INT64 = 2
Global Const XPRS_TYPE_DOUBLE = 3
Global Const XPRS_TYPE_STRING = 4

' Enumeration values relating to QCONVEXITY
Global Const XPRS_QCONVEXITY_UNKNOWN = -1
Global Const XPRS_QCONVEXITY_NONCONVEX = 0
Global Const XPRS_QCONVEXITY_CONVEX = 1
Global Const XPRS_QCONVEXITY_REPAIRABLE = 2
Global Const XPRS_QCONVEXITY_CONVEXCONE = 3
Global Const XPRS_QCONVEXITY_CONECONVERTABLE = 4

' Enumeration values relating to SOLINFO
Global Const XPRS_SOLINFO_ABSPRIMALINFEAS = 0
Global Const XPRS_SOLINFO_RELPRIMALINFEAS = 1
Global Const XPRS_SOLINFO_ABSDUALINFEAS = 2
Global Const XPRS_SOLINFO_RELDUALINFEAS = 3
Global Const XPRS_SOLINFO_MAXMIPFRACTIONAL = 4

' Bitfield values relating to XPRSmipsolpool_soln_flags
Global Const XPRS_ISUSERSOLUTION = 1
Global Const XPRS_ISREPROCESSEDUSERSOLUTION = 2


' Optimiser DLL Function Declarations
' NB You may have to change the path of "XPRS.DLL" so that VB can find the DLL.
Declare PtrSafe Function XPRScopycallbacks Lib "XPRS.DLL" (ByVal dest As LongPtr, ByVal src As LongPtr) As Long
Declare PtrSafe Function XPRScopycontrols Lib "XPRS.DLL" (ByVal dest As LongPtr, ByVal src As LongPtr) As Long
Declare PtrSafe Function XPRScopyprob Lib "XPRS.DLL" (ByVal dest As LongPtr, ByVal src As LongPtr, ByVal probname As String) As Long
Declare PtrSafe Function XPRScreateprob Lib "XPRS.DLL" (ByRef probholder As LongPtr) As Long
Declare PtrSafe Function XPRSdestroyprob Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long

Declare PtrSafe Function XPRSinit Lib "XPRS.DLL" (ByVal path As String) As Long
Declare PtrSafe Function XPRSfree Lib "XPRS.DLL" () As Long
Private Declare PtrSafe Function XPRSgetbanner_C Lib "XPRS.DLL" Alias "XPRSgetbanner" (ByVal banner As String) As Long
Private Declare PtrSafe Function XPRSgetversion_C Lib "XPRS.DLL" Alias "XPRSgetversion" (ByVal version As String) As Long
Declare PtrSafe Function XPRSgetdaysleft Lib "XPRS.DLL" (ByRef daysleft As Long) As Long
Declare PtrSafe Function XPRSsetcheckedmode Lib "XPRS.DLL" (ByVal checked_mode As Long) As Long
Declare PtrSafe Function XPRSgetcheckedmode Lib "XPRS.DLL" (ByRef r_checked_mode As Long) As Long
Private Declare PtrSafe Function XPRSlicense_C Lib "XPRS.DLL" Alias "XPRSlicense" (ByRef i1 As Long, ByVal c1 As String) As Long
Declare PtrSafe Function XPRSbeginlicensing Lib "XPRS.DLL" (ByRef r_dontAlreadyHaveLicense As Long) As Long
Declare PtrSafe Function XPRSendlicensing Lib "XPRS.DLL" () As Long
Private Declare PtrSafe Function XPRSgetlicerrmsg_C Lib "XPRS.DLL" Alias "XPRSgetlicerrmsg" (ByVal msg As String, ByVal len_ As Long) As Long

Declare PtrSafe Function XPRSsetlogfile Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal logname As String) As Long
Declare PtrSafe Function XPRSsetintcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByVal ivalue As LongLong) As Long
Declare PtrSafe Function XPRSsetdblcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByVal dvalue As Double) As Long
Declare PtrSafe Function XPRSinterrupt Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal reason As Long) As Long
Private Declare PtrSafe Function XPRSgetprobname_C Lib "XPRS.DLL" Alias "XPRSgetprobname" (ByVal prob As LongPtr, ByVal svalue As String) As Long
Declare PtrSafe Function XPRSgetqobj Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal icol As Long, ByVal jcol As Long, ByRef dval As Double) As Long
Declare PtrSafe Function XPRSsetprobname Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal svalue As String) As Long
Declare PtrSafe Function XPRSsetstrcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByVal svalue As String) As Long
Declare PtrSafe Function XPRSgetintcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByRef ivalue As LongLong) As Long
Declare PtrSafe Function XPRSgetdblcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByRef dvalue As Double) As Long
Private Declare PtrSafe Function XPRSgetstrcontrol_C Lib "XPRS.DLL" Alias "XPRSgetstrcontrol" (ByVal prob As LongPtr, ByVal index As Long, ByVal svalue As String) As Long
Private Declare PtrSafe Function XPRSgetstringcontrol_C Lib "XPRS.DLL" Alias "XPRSgetstringcontrol" (ByVal prob As LongPtr, ByVal index As Long, ByVal svalue As String, ByVal svaluesize As Long, ByRef controlsize As Long) As Long
Declare PtrSafe Function XPRSgetintattrib Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByRef ivalue As LongLong) As Long
Private Declare PtrSafe Function XPRSgetstrattrib_C Lib "XPRS.DLL" Alias "XPRSgetstrattrib" (ByVal prob As LongPtr, ByVal index As Long, ByVal cvalue As String) As Long
Private Declare PtrSafe Function XPRSgetstringattrib_C Lib "XPRS.DLL" Alias "XPRSgetstringattrib" (ByVal prob As LongPtr, ByVal index As Long, ByVal cvalue As String, ByVal cvaluesize As Long, ByRef controlsize As Long) As Long
Declare PtrSafe Function XPRSgetdblattrib Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long, ByRef dvalue As Double) As Long
Declare PtrSafe Function XPRSsetdefaultcontrol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal index As Long) As Long
Declare PtrSafe Function XPRSsetdefaults Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSgetcontrolinfo Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sCaName As String, ByRef iHeaderId As Long, ByRef iTypeinfo As Long) As Long
Declare PtrSafe Function XPRSgetattribinfo Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sCaName As String, ByRef iHeaderId As Long, ByRef iTypeinfo As Long) As Long
